--- a/index.html
+++ b/index.html
@@ -29,13 +29,21 @@ margin-right: 10px;
     box-sizing: border-box;
 }
 .body {
-    margin-top: 10px;
+    margin-top: 5px;
 }
 h3 {
     font-style: normal;
     font-family:sans-serif;
     text-decoration: underline;
+    margin-top: 3px;
     
+}
+.resource{
+    font-weight: bold;
+    margin-top: 2px;
+}
+.about{
+    margin-top: 2px;
 }
 
     </style>
@@ -44,11 +52,11 @@ h3 {
 <body>
   <div class="container">  
 <img src="pfp.jpg" alt="the owner of this institution, who is mr raihan known as reckless boy">
-<p class="username" style=font:16>@recklessboy</p>
+<p class="username" style=font:16>Mohamed Raihan </p>
 <p class="about"><a href="aboutme.html">About me</a></p>
 <h3>A simple introduction</h3>
 <p class="body"> Welcome to our page! 🚗✨ Here, we share the coolest car spottings we come across. From rare classics to modern beasts, every car has its own story. We’ll keep updating with fresh photos of the cars we spot, along with details like the model, features, and the exact location where we found them. This space is all about enjoying cars together and giving our followers a closer look at the rides that make the streets more exciting!</p>
-
+<p class="resource">To get more information about our resources click <a href="resource.html">here</a></p>
 
 
 </div>
