--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <h1>welcome to our webpage </h1>
-<title>spotted.com</title></head>
+<title>spotted.com</title>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
 <style>
 img {
 width:100px;
@@ -30,6 +32,7 @@ margin-right: 10px;
 }
 .body {
     margin-top: 5px;
+    
 }
 h3 {
     font-style: normal;
@@ -38,15 +41,47 @@ h3 {
     margin-top: 3px;
     
 }
-.resource{
-    font-weight: bold;
-    margin-top: 2px;
-}
 .about{
     margin-top: 2px;
 }
+body {
+    background-color: rgb(217, 227, 241);
+}
+ .facebook{
+        font-size: 18px;
+        margin-bottom: 2px;
+    }
+    .facebook i {
+        color: #4267b2;
+        margin-right: 5px;
+    }
+    .instagram {
+        font-size: 18px;
+        margin-top: 1px;
+        margin-bottom: 2px;
+    }
+    .instagram i {
+        margin-right: 5px;
+        color:#E1306C;
+    }
+    .tiktok {
+        font-size: 18px;
+        margin-top: 1px;
+        margin-bottom: 2px;
+    }
+    .tiktok i {
+        color: black;
+    }
+    .youtube {
+        font-size: 18px;
+        margin-top: 1px;
+        margin-bottom: 2px;
+    }
+    .youtube i {
+        color: red;
+    }
 
-    </style>
+ </style>
 
 
 <body>
@@ -56,9 +91,26 @@ h3 {
 <p class="about"><a href="aboutme.html">About me</a></p>
 <h3>A simple introduction</h3>
 <p class="body"> Welcome to our page! 🚗✨ Here, we share the coolest car spottings we come across. From rare classics to modern beasts, every car has its own story. We’ll keep updating with fresh photos of the cars we spot, along with details like the model, features, and the exact location where we found them. This space is all about enjoying cars together and giving our followers a closer look at the rides that make the streets more exciting!</p>
-<p class="resource">To get more information about our resources click <a href="resource.html">here</a></p>
 
 
+</div>
+<div>
+    <p class="instagram">
+        <i class="fab fa-instagram"></i>
+        <a href="https://www.instagram.com/itz_reckless_boy?igsh=eG14ZjZtZnN5MTVm">Instagram</a>
+    </p>
+    <p class="tiktok">
+<i class="fab fa-tiktok"></i>
+<a href="https://www.tiktok.com/@itz_reckless_boy?_t=ZS-907pTVd3fHD&_r=1">Tiktok</a>
+    </p>
+    <p class="facebook">
+<i class="fab fa-facebook"></i>
+<a href="https://www.facebook.com/share/16TZb5Xe9a/">Facebook</a>
+    </p>
+    <p class="youtube">
+        <i class="fab fa-youtube"></i>
+        <a href="https://youtube.com/@reckless4real?si=fKrelRUqXsooYLjq">Youtube</a>
+    </p>
 </div>
 </body>
 
