--- a/resource.html
+++ b/resource.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources</title>
     <style>
-        h2{
-            text-align: center;
+        h3{
+            text-align: left;
             font-weight: bold;
             font-size: xx-large;
             text-decoration: underline;
@@ -17,12 +17,20 @@
             font-style: normal;
             font-size: medium;
             font-family:'Lucida Sans';
+            
+        }
+        button{
+            width: 100px;
+            height: 25px;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
-   <h2>How we get these clips..????</h2>
+   <h3>About our resources</h3>
    <p> All the photos used in this project are real and authentic. Some of them were taken from TikTok and various social media platforms such as Instagram, X (formerly Twitter), and Threads. A portion of the images were captured by individuals, including myself, my close friends, and supporters who follow our page. None of the content is sourced from Google or includes any fake or AI-generated images. Proper credits will be added where necessary.
  </p>
+<p><a href="social media.html">support us</a></p>
+ <button onclick="location.href='index.html'">homepage</button>
 </body>
 </html>
