about me bg color

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,6 +12,7 @@
         font-style: normal;
         line-height: normal;
         line-break: loose;
+        background-color:  rgb(217, 227, 241);
     }
     h2{
         text-underline-position: below;
